memberを人数分完成とそれを画像の下にもってくるようにする

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,8 @@
 /* ページ全体 */
 
 body {
-    background-color: #0f1923;
+  background-color: #0f1923;
 }
-
 
 /** ヘッダー */
 
@@ -12,10 +11,10 @@ body {
 }
 
 .header__nav {
-  display:flex;
+  display: flex;
   margin-left: auto;
-  justify-content:flex-end;
-  align-items: flex-end; 
+  justify-content: flex-end;
+  align-items: flex-end;
   width: 10%;
 }
 
@@ -28,37 +27,44 @@ body {
   flex-wrap: wrap;
   display: flex;
   align-content: center;
-
 }
 
-.member {background-color: white;
-  padding: 30px;
+.member {
+  background-color: white;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .member__image img {
+  background-color: #0f1923;
   width: 200px;
-  margin: 15px;
+  padding: 30px;
+  margin: 50px;
 }
 
-.member__name {background-color: #0f1923;
+.member__name {
+  background-color: #0f1923;
   color: white;
 }
 
-
 /* ゲーム */
-.game-section .games {display: flex;
+.game-section .games {
+  display: flex;
   padding-top: 10px;
-background-color: #0f1923
+  background-color: #0f1923;
 }
 
-.game {background-color: #0f1923
-  
+.game {
+  background-color: #0f1923;
+  width: 100%;
 }
 
 .gamegame__image {
+  background-color: #0f1923;
 }
 
-.game__name {padding: 10px;
+.game__name {
+  padding: 10px;
 }
 
 /* お問い合わせ */
